debtor_logic_optimized
