# api-gateway/docs/swagger.json
@@ -1145,6 +1145,20 @@
                         "name": "size",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "from",
+                        "name": "from",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "to",
+                        "name": "to",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -4010,25 +4024,16 @@
                 "balance": {
                     "type": "string"
                 },
-                "comment": {
+                "debtorId": {
                     "type": "string"
                 },
-                "groupId": {
-                    "type": "string"
-                },
-                "groupName": {
+                "debtorName": {
                     "type": "string"
                 },
                 "phoneNumber": {
                     "type": "string"
                 },
-                "totalDebOnThisMonth": {
-                    "type": "string"
-                },
-                "userId": {
-                    "type": "string"
-                },
-                "userName": {
+                "totalOnPeriod": {
                     "type": "string"
                 }
             }
